Fixes nav on tablets to display mobile nav

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -235,7 +235,7 @@
 ----------------------------------- */
 
 @media only screen
-and (max-width : 768px) {
+and (max-width : 1024px) {
 
 	.top-nav {
 		height: 60px;
@@ -549,7 +549,7 @@ and (max-width : 568px) {
 
 @media only screen
 and (min-width : 569px)
-and (max-width : 768px) {
+and (max-width : 1024px) {
 
 	#menudrop {
 		padding: 0 $general-padding*1.25;
